deploy/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qcon-api
  namespace: qcon-api
  labels:
    app: qcon-api
spec:
  template:
    spec:
      containers:
      - name: qcon-api
        image: qcon-api
        volumeMounts:
          - name: podinfo
            mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "app"
                fieldRef:
                  fieldPath: metadata.labels['app']
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
