deploy/overlays/dev/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/projectId: c-k7tjr:p-nqcxq
  name: 196-fix-pipeline-for-dev
---
apiVersion: v1
kind: Service
metadata:
  name: qcon-api-service
  namespace: 196-fix-pipeline-for-dev
spec:
  ports:
  - port: 8000
  selector:
    app: qcon-api
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.gitlab.com/app: web-apps-qcon-qcon-api
    app.gitlab.com/env: dev-cp-review-196-n6avfq
    build_env: dev
    build_hash: 95f3ab964d0b287be39d2a118fe072df9a369b46
    build_short_sha: 95f3ab96
    build_timestamp: "2021-10-25T22:28:25-07:00"
    cluster_name: dev-cp
    path_name: 196-fix-pipeline-for-dev
    version: 1.13.1-95f3ab96
  labels:
    app: qcon-api
    env: dev
  name: qcon-api
  namespace: 196-fix-pipeline-for-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qcon-api
  template:
    metadata:
      labels:
        app: qcon-api
    spec:
      containers:
      - image: registry.dev.ltc.bcit.ca/web-apps/qcon/qcon-api:95f3ab96
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          tcpSocket:
            port: 8000
        name: qcon-api
        ports:
        - containerPort: 8000
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 30
          tcpSocket:
            port: 8000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /etc/podinfo
          name: podinfo
      serviceAccountName: dependabot-qcon-api
      volumes:
      - downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              fieldPath: metadata.annotations
            path: annotations
        name: podinfo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qcon-api-ingress
  namespace: 196-fix-pipeline-for-dev
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: qcon-api-service
            port:
              number: 8000
        path: /
        pathType: Prefix
